archive/kubernetes/apps/_base/network/gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  annotations:
    cert-manager.io/issuer: letsencryt
    external-dns-managed: "true"
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
      oci-network-load-balancer.oraclecloud.com/oci-network-security-groups: "${lb_nsg_id}"
      service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
      service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
      service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
      proxy.istio.io/config: |
        proxyMetadata:
          ISTIO_META_DEFAULT_CONFIG: |
            concurrency: 2
            protocolDetectionTimeout: 100ms
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: domain-https
      hostname: ${domain}
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: domain-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: wildcard-domain-https
      hostname: "*.${domain}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: domain-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: game-tcp-7777
      port: 7777
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: All
    - name: game-udp-7777
      port: 7777
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: All
    - name: game-tcp-8888
      port: 8888
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: All
